ADDED Docker compose + fixed all

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,13 +8,13 @@
     <title>Document</title>
 </head>
 <body>
-<form action="/login" method="post">
+<form action="/login/in" method="post">
     <div><label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Log In"/></div>
 </form>
 
-<form action="/registration" method="post" >
+<form action="/users/registration" method="post" >
     <div><input type="submit" value="Registration"/></div>
 </form>
 
