--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -8,26 +8,26 @@
     <title>Document</title>
 </head>
 <body>
-<form th:action="@{/users/}" method="post" th:object="${user}">
+<form th:action="@{/users/api/save/users}" method="post" th:object="${user}">
 
     <label for="username">Username:
         <input id="username" type="text" name="username" th:value="*{username}">
     </label><br>
 
     <label for="age">Age:
-        <input id="age" type="text" name="age" th:value="*{age}">
+        <input id="age" type="number" name="age" th:value="*{age}">
     </label><br>
 
     <label for="lastname">Lastname:
-        <input id="lastname" type="text" name="lastname" th:value="*{lastName}">
+        <input id="lastname" type="text" name="lastName" th:value="*{lastName}">
     </label><br>
 
     <label for="firstname">Firstname:
-        <input id="firstname" type="text" name="firstname" th:value="*{firstName}">
+        <input id="firstname" type="text" name="firstName" th:value="*{firstName}">
     </label><br>
 
     <label for="phonenumber">phoneNumber:
-        <input id="phonenumber" type="text" name="phonenumber" th:value="*{phoneNumber}">
+        <input id="phonenumber" type="text" name="phoneNumber" th:value="*{phoneNumber}">
     </label><br>
 
     <label for="address">address:
@@ -42,10 +42,14 @@
         <input id="email" type="text" name="email" th:value="*{email}">
     </label><br>
 
-    <div th:each="role : ${roles}">
-        <input th:id="${role}" type="radio" name="role" th:value="${role}" th:checked="${role == user.role}">
-        <label th:for="${role}" th:text="${role} ">Role name</label>
-    </div>
+    <label for="password">password:
+        <input id="password" type="text" name="password" th:value="*{password}">
+    </label><br>
+
+<!--    <div th:each="role : ${roles}">-->
+<!--        <input th:id="${role}" type="radio" name="role" th:value="${role}" th:checked="${role == user.role}">-->
+<!--        <label th:for="${role}" th:text="${role} ">Role name</label>-->
+<!--    </div>-->
 
     <button type="submit">Register</button>
 </form>
