--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,18 +5,22 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<!--    <title>Авторизация</title>-->
+    <link rel="stylesheet" href="../static/stylelogin.css">
 </head>
+
 <body>
-<form action="/login/in" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
-    <div><input type="submit" value="Log In"/></div>
+<div class="container">
+    <h2>Авторизация</h2>
+<form action="/login/in" method="post" class="login-form">
+    <div><label> Логин : <input type="text" name="username"/> </label></div>
+    <div><label> Пароль: <input type="password" name="password"/> </label></div>
+    <div><input type="submit" value="Войти"/></div>
 </form>
 
-<form action="/users/registration" method="post" >
-    <div><input type="submit" value="Registration"/></div>
+<form action="/users/registration" method="post" class="register-form">
+    <div><input type="submit" value="Зарегистрироваться"/></div>
 </form>
-
+</div>
 </body>
 </html>
