--- a/src/main/resources/templates/user/registration.html
+++ b/src/main/resources/templates/user/registration.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
     <h2>Регистрация</h2>
-<form th:action="@{/users/api/save/users}" method="post" class="register-form"  th:object="${user}">
+<form th:action="@{/users/api/save/users}" method="post" class="register-form"  th:object="${user}"  onsubmit="return validateForm()">
 
     <label for="username">Логин:
         <input id="username" type="text" name="username" th:value="*{username}">
@@ -38,8 +38,8 @@
         <input id="address" type="text" name="address" th:value="*{address}">
     </label><br>
 
-    <label for="documentNumber">Серия и номер паспорта:
-        <input id="documentNumber" type="text" name="documentNumber" th:value="*{documentNumber}">
+    <label for="middleName">Отчество:
+        <input id="middleName" type="text" name="middleName" th:value="*{middleName}">
     </label><br>
 
     <label for="email">Эл. почта:
@@ -58,5 +58,45 @@
     <button type="submit">Зарегистрироваться</button>
 </form>
 </div>
+<script>
+    function validateForm() {
+        var username = document.getElementById("username").value;
+        var age = document.getElementById("age").value;
+        var lastname = document.getElementById("lastname").value;
+        var firstname = document.getElementById("firstname").value;
+        var phonenumber = document.getElementById("phonenumber").value;
+        var address = document.getElementById("address").value;
+        var middleName = document.getElementById("middleName").value;
+        var email = document.getElementById("email").value;
+        var password = document.getElementById("password").value;
+
+        if (username === "" || age === "" || lastname === "" || firstname === "" || phonenumber === "" || address === "" || middleName === "" || email === "" || password === "") {
+            alert("Все поля должны быть заполнены");
+            return false;
+        }
+
+        if (!/^\d+$/.test(age) || age <= 0) {
+            alert("Возраст должен быть положительным числом");
+            return false;
+        }
+
+        if (!/^\+?[0-9]{10,15}$/.test(phonenumber)) {
+            alert("Номер телефона должен содержать только цифры и быть в формате от 10 до 15 цифр");
+            return false;
+        }
+
+        if (!/\S+@\S+\.\S+/.test(email)) {
+            alert("Некорректный формат электронной почты");
+            return false;
+        }
+
+        if (password.length < 6) {
+            alert("Пароль должен быть не менее 6 символов");
+            return false;
+        }
+
+        return true;
+    }
+</script>
 </body>
 </html>
