--- a/src/main/resources/templates/licabinet.html
+++ b/src/main/resources/templates/licabinet.html
@@ -3,11 +3,368 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Личный кабинет</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+        }
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .card {
+            margin-bottom: 20px;
+        }
+        .card-header {
+            background-color: #4CAF50;
+            color: white;
+        }
+        .card-body {
+            padding: 20px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        .modal-body .form-group {
+            margin-bottom: 10px;
+        }
+        .modal-footer {
+            justify-content: space-between;
+        }
+        .right-float {
+            float: right;
+        }
+        #togglePassword {
+            background-image: url('/images/eye.png'); /* Путь к изображению иконки */
+            background-size: 20px; /* Размер иконки */
+            background-repeat: no-repeat; /* Запрет повторения фона */
+            background-position: center; /* Позиция иконки в центре кнопки */
+            padding: 8px; /* Внутренние отступы для обеспечения места под иконку */
+            border: 1px solid #ccc; /* Граница */
+            border-radius: 4px; /* Закругление углов */
+            cursor: pointer; /* Изменение курсора при наведении */
+        }
+        /* Custom CSS for the header fragment */
+        .custom-header {
+            background-color: #333;
+            color: #df0e0e;
+            padding: 10px 0;
+            text-align: center;
+            font-size: 18px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
-<h1>Личный кабинет</h1>
+<div class="container">
+    <h2>Личный кабинет</h2>
+
+    <!-- Информация о пользователе и счет -->
+    <div class="card">
+        <div class="card-header">
+            Ваша информация
+        </div>
+        <div class="card-body">
+            <form id="userForm">
+                <div class="form-group">
+                    <label for="username">Логин:</label>
+                    <input id="username" type="text" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="firstName">Имя:</label>
+                    <input id="firstName" type="text" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="lastName">Фамилия:</label>
+                    <input id="lastName" type="text" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="middleName">Отчество:</label>
+                    <input id="middleName" type="text" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="email">Эл. почта:</label>
+                    <input id="email" type="email" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                <label for="phonenumber">Номер телефона:</label>
+                <input id="phonenumber" type="text" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                <label for="age">Возраст:</label>
+                <input id="age" type="text" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                <label for="address">Адресс:</label>
+                <input id="address" type="email" class="form-control" disabled>
+                </div>
+                <div class="form-group">
+                    <label for="password">Пароль:</label>
+                    <div class="input-group">
+                        <input id="password" type="password" class="form-control" placeholder="Введите пароль" aria-label="Password" aria-describedby="togglePassword">
+                        <div class="input-group-append">
+                            <button class="btn btn-outline-secondary" type="button" id="togglePassword">
+                                <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" id="editProfileBtn" class="btn btn-primary right-float">Редактировать</button>
+                <button type="button" id="saveProfileBtn" class="btn btn-success right-float" style="display: none;">Сохранить</button>
+            </form>
+            <div th:insert="~{fragment::header}"></div>
+
+        </div>
+    </div>
+
+<!-- Модальное окно для редактирования профиля -->
+<div class="modal fade" id="editProfileModal" tabindex="-1" role="dialog" aria-labelledby="editProfileModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="editProfileModalLabel">Редактировать профиль</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="editProfileForm">
+                    <div class="form-group">
+                        <label for="editusername">Логин:</label>
+                        <input id="editusername" type="text" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editfirstName">Имя:</label>
+                        <input id="editfirstName" type="text" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editlastName">Фамилия:</label>
+                        <input id="editlastName" type="text" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editmiddleName">Отчество:</label>
+                        <input id="editmiddleName" type="text" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editemail">Эл. почта:</label>
+                        <input id="editemail" type="email" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editphonenumber">Номер телефона:</label>
+                        <input id="editphonenumber" type="text" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editage">Возраст:</label>
+                        <input id="editage" type="text" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editaddress">Адресс:</label>
+                        <input id="editaddress" type="email" class="form-control" >
+                    </div>
+                    <div class="form-group">
+                        <label for="editpassword">Пароль:</label>
+                        <div class="input-group">
+                            <input id="editpassword" type="password" class="form-control" placeholder="Введите пароль" aria-label="Password" aria-describedby="togglePassword">
+                            <div class="input-group-append">
+                                <button class="btn btn-outline-secondary" type="button" id="edittogglePassword">
+                                    <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                <button type="button" id="saveProfileChangesBtn" class="btn btn-primary">Сохранить</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+<script>
+    $(document).ready(function() {
+        // Находим кнопку "Редактировать профиль" по ее идентификатору
+        $('#editProfileBtn').click(function () {
+            // При клике показываем модальное окно с идентификатором editProfileModal
+            $('#editProfileModal').modal('show');
+        });
+
+        // Функция скрытия пароля в модальном окне
+        $('#edittogglePassword').click(function() {
+            var passwordField = $('#editpassword');
+            var icon = $(this).find('i');
+
+            if (passwordField.attr('type') === 'password') {
+                passwordField.attr('type', 'text');
+                icon.removeClass('fa-eye-slash').addClass('fa-eye');
+            } else {
+                passwordField.attr('type', 'password');
+                icon.removeClass('fa-eye').addClass('fa-eye-slash');
+            }
+        });
+
+        // Функция скрытия пароля в профиле
+        $('#togglePassword').click(function() {
+            var passwordField = $('#password');
+            var icon = $(this).find('i');
+
+            if (passwordField.attr('type') === 'password') {
+                passwordField.attr('type', 'text');
+                icon.removeClass('fa-eye-slash').addClass('fa-eye');
+            } else {
+                passwordField.attr('type', 'password');
+                icon.removeClass('fa-eye').addClass('fa-eye-slash');
+            }
+        });
+
+        // Функция загрузки данных в модальное окно при клике на кнопку "Редактировать профиль"
+        $('#editProfileBtn').click(function() {
+            const userId = getParameterByName('userId');
+            if (userId) {
+                const url = `/users/api/users/${userId}`;  // Формируем URL запроса
+                $.ajax({
+                    url: url,
+                    method: 'GET',
+                    success: function(response) {
+                        console.log('Успешно получены данные пользователя:', response);
+                        // Заполняем поля формы данными пользователя
+                        $('#editusername').val(response.username);
+                        $('#editfirstName').val(response.firstName);
+                        $('#editlastName').val(response.lastName);
+                        $('#editmiddleName').val(response.middleName);
+                        $('#editemail').val(response.email);
+                        $('#editphonenumber').val(response.phoneNumber);
+                        $('#editage').val(response.age);
+                        $('#editaddress').val(response.address);
+                        $('#editpassword').val(response.password);
+                        // Устанавливаем ID пользователя в атрибут data-id кнопки "Сохранить"
+                        $('#saveProfileChangesBtn').attr('data-id', response.id);
+                    },
+                    error: function(error) {
+                        console.error('Ошибка при получении данных пользователя:', error);
+                        alert('Ошибка при получении данных пользователя');
+                    }
+                });
+            } else {
+                console.error('userId не найден в URL');
+                alert('userId не найден в URL');
+            }
+        });
+
+        // Обработчик клика по кнопке "Сохранить" в модальном окне
+        $('#saveProfileChangesBtn').click(function() {
+            // Получаем данные из формы
+            var username = $('#editusername').val();
+            var firstName = $('#editfirstName').val();
+            var lastName = $('#editlastName').val();
+            var email = $('#editemail').val();
+            var middlename = $('#editmiddleName').val();
+            var phonenumber = $('#editphonenumber').val();
+            var age = $('#editage').val();
+            var address = $('#editaddress').val();
+            var password = $('#editpassword').val();
+            // Получаем ID пользователя из атрибута data-id кнопки
+            var userId = $(this).attr('data-id');
+            // Формируем объект с данными для отправки на сервер
+            var userData = {
+                id: userId,
+                username: username,
+                firstName: firstName,
+                lastName: lastName,
+                email: email,
+                middleName: middlename,
+                phoneNumber: phonenumber,
+                age: age,
+                address: address,
+                password: password
+            };
+            // Отправляем AJAX запрос на сервер для сохранения изменений
+            $.ajax({
+                type: 'PUT', // Метод запроса (может быть и POST в зависимости от вашей логики на сервере)
+                url: '/users/api/user/put/' + userId, // URL вашего API
+                contentType: 'application/json', // Тип данных, отправляемых на сервер
+                data: JSON.stringify(userData), // Преобразуем данные в JSON
+                success: function(response) {
+                    // Обработка успешного ответа от сервера (например, обновление интерфейса)
+                    console.log('Профиль успешно обновлен', response);
+                    $('#editProfileModal').modal('hide'); // Закрываем модальное окно после успешного сохранения
+                    // Дополнительные действия при необходимости
+                    location.reload(); // Перезагружаем страницу, чтобы увидеть изменения
+                },
+                error: function(xhr, status, error) {
+                    // Обработка ошибки (например, вывод сообщения об ошибке)
+                    console.error('Ошибка при сохранении профиля', error);
+                    // Дополнительные действия при необходимости
+                }
+            });
+        });
+
+        // Загрузка информации о пользователе в профиль
+        const userId = getParameterByName('userId');
+        if (userId) {
+            const url = `/users/api/users/${userId}`;  // Формируем URL запроса
+            $.ajax({
+                url: url,
+                method: 'GET',
+                success: function(response) {
+                    console.log('Успешно получены данные пользователя:', response);
+                    // Заполняем поля формы данными пользователя
+                    $('#username').val(response.username);
+                    $('#firstName').val(response.firstName);
+                    $('#lastName').val(response.lastName);
+                    $('#middleName').val(response.middleName);
+                    $('#email').val(response.email);
+                    $('#phonenumber').val(response.phoneNumber);
+                    $('#age').val(response.age);
+                    $('#address').val(response.address);
+                    $('#password').val(response.password);
+                    if (response.account) {
+                        $('#accountSection').show();
+                        $('#createAccountSection').hide();
+                        $('.account-info').text(`Номер счета: ${response.account.number}, Баланс: ${response.account.balance}`);
+                    } else {
+                        $('#accountSection').hide();
+                        $('#createAccountSection').show();
+                    }
+                },
+                error: function(error) {
+                    console.error('Ошибка при получении данных пользователя:', error);
+                    alert('Ошибка при получении данных пользователя');
+                }
+            });
+        } else {
+            console.error('userId не найден в URL');
+            alert('userId не найден в URL');
+        }
+    });
+
+    // Функция чтобы доставать userId из URL
+    function getParameterByName(name) {
+        const url = window.location.href;
+        name = name.replace(/[\[\]]/g, '\\$&');
+        const regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)');
+        const results = regex.exec(url);
+        if (!results) return null;
+        if (!results[2]) return '';
+        return decodeURIComponent(results[2].replace(/\+/g, ' '));
+    }
+
+</script>
 </body>
 </html>
